예시용 js 업데이트

--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script> -->
   <script src="./flank.js"></script>
   <script src="./play.js"></script>
-  <script src="./sketch.js"></script>
+  <script src="./test2.js"></script>
 
 </head>
 <body>
-
-  heyu
   <!-- 라이브 서버 열기 : Ctrl + Alt + 3 -->
 </body>
 </html>
