--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-  <script src="./flank.js"></script>
-  <script src="./play.js"></script>
-  <script src="./test2.js"></script>
+  <!-- <link rel="stylesheet" href="./css/test.css" /> -->
 
+  <title>Document</title>
 </head>
 <body>
-  <!-- 라이브 서버 열기 : Ctrl + Alt + 3 -->
+
+  <!-- p5play.org에서 가져옴 -->
+  <!-- Version 3 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script> -->
+  <script src="https://p5play.org/v3/planck.js"></script>
+  <script src="https://p5play.org/v3/p5.play.js"></script>
+
+  <script src="./anitst.js"></script>
+
 </body>
 </html>
