--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 </head>
 <body>
 
-  <!-- p5play.org에서 가져옴 -->
   <!-- Version 3 -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script> -->
-  <script src="https://p5play.org/v3/planck.js"></script>
-  <script src="https://p5play.org/v3/p5.play.js"></script>
+  <script src="./p5.js"></script>
+  <!-- <script src="./p5.sound.js"></script> -->
+  <script src="./p5.planck.js"></script>
+  <script src="./p5.play.js"></script>
 
-  <script src="./anitst.js"></script>
+  <script src="./test4.js"></script>
 
 </body>
 </html>
