--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <script src="./p5.js"></script>
   <!-- <script src="./p5.sound.js"></script> -->
   <script src="./p5.planck.js"></script>
-  <script src="./p5.play.js"></script>
+  <!-- <script src="./p5.play.js"></script> -->
+  <script src="./p5.play3.1.6.js"></script>
 
-  <script src="./test5.js"></script>
+  <script src="./test6_3.js"></script>
 
 </body>
 </html>
